--- a/app/assets/scss/main.scss
+++ b/app/assets/scss/main.scss
@@ -40,6 +40,7 @@
 @import '3-modules/company';
 @import '3-modules/thanks';
 @import '3-modules/home';
+@import '3-modules/custom';
 
 
 // 4 - pages
