--- a/app/pages/section/index.njk
+++ b/app/pages/section/index.njk
@@ -539,7 +539,7 @@
       <div class="hero03__box">
         <div class="hero03__box--sub">サブタイトルが入ります</div>
         <h1 class="ttl-primary">h1タイトルがそのまま入ります<br>h1タイトルがそのまま入ります</h1>
-        <a href="#" class="btn01">ボタン名が入ります</a>
+        <a href="#" class="btn01">サポート担当に無料で相談する</a>
       </div>
     </div>
   </section>
