--- a/app/pages/meta_search/index.njk
+++ b/app/pages/meta_search/index.njk
@@ -17,7 +17,7 @@
 {# Main content #}
 {% block content %}
 
-  <main class="secondary-page">
+  <main class="meta-search-page">
     <section class="section-primary">
       <div class="containers">
         <div class="flex inherit content-wrapper">
