--- a/app/pages/introduce/index.njk
+++ b/app/pages/introduce/index.njk
@@ -19,7 +19,7 @@
 {# Main content #}
 {% block content %}
 
-<main class="terinary-page">
+<main class="introduce-page">
   <section class="section-welcome">
     <h3 class="ttl-tertiary">業務の効率化から資金繰りまで</h3>
 
@@ -199,7 +199,7 @@
                   <h3 class="card__box--ttl">キャッシュバックを重視したいという方へ</h3>
 
                   <div class="container">
-                    <h3 class="ttl-terianry centered-text">セゾンプラチナ・ビジネス プロ・ <br> アメリカン・エキスプレス®・カード</h3>
+                    <h3 class="ttl-tertiary centered-text">セゾンプラチナ・ビジネス プロ・ <br> アメリカン・エキスプレス®・カード</h3>
 
                     <div class="credit-card">
                       <img src="/assets/img/credit_cards/american-express.png" alt="Your Image" class="card-img">
@@ -222,7 +222,7 @@
                   <h3 class="card__box--ttl">年会費を重視したいという方へ</h3>
 
                   <div class="container">
-                    <h3 class="ttl-terianry centered-text">セゾンゴールド・ビジネス プロ・カード</h3>
+                    <h3 class="ttl-tertiary centered-text">セゾンゴールド・ビジネス プロ・カード</h3>
 
                     <div class="credit-card">
                       <img src="/assets/img/credit_cards/saison-01.png" alt="Your Image" class="card-img">
@@ -245,7 +245,7 @@
                   <h3 class="card__box--ttl">不正利用のリスクを軽減したい方へ</h3>
 
                   <div class="container">
-                    <h3 class="ttl-terianry centered-text">セゾン・アメリカン・エキスプレス®・ビジネス プロ・パーチェシング・カード</h3>
+                    <h3 class="ttl-tertiary centered-text">セゾン・アメリカン・エキスプレス®・ビジネス プロ・パーチェシング・カード</h3>
 
                     <div class="credit-card">
                       <img src="/assets/img/credit_cards/saison-02.png" alt="Your Image" class="card-img">
