--- a/app/pages/introduce/index.njk
+++ b/app/pages/introduce/index.njk
@@ -19,7 +19,7 @@
 {# Main content #}
 {% block content %}
 
-<main class="terinary-page">
+<main class="introduce-page">
   <section class="section-welcome">
     <h3 class="ttl-tertiary">業務の効率化から資金繰りまで</h3>
 
