--- a/app/assets/scss/4-pages/_introduce.scss
+++ b/app/assets/scss/4-pages/_introduce.scss
@@ -763,7 +763,7 @@
       }
     }
 
-    .notification-terinary {
+    .notification-tertiary {
       .panel-05 {
       }
     }
@@ -913,7 +913,7 @@
     }
   }
 
-  .section-terinary {
+  .section-tertiary {
     padding: 70px 0;
     text-align: center;
     background-color: #fff;
