btn scss mopdules

--- a/app/pages/introduce/index.njk
+++ b/app/pages/introduce/index.njk
@@ -25,7 +25,7 @@
 
     <h2 class="ttl-primary">中小企業様向けサービス</h2>
 
-    <a href="#" class="btn01">まとめて資料をダウンロードする</a>
+    <a href="#" class="btn02">まとめて資料をダウンロードする</a>
   </section>
 
   <section class="section-primary">
@@ -143,7 +143,7 @@
 
             <summary class="flex gap30 aiC inquiry__box">
               <div class="flex inquiry__box--btn">
-                <a href="#" class="btn01">解決策！</a>
+                <a href="#" class="btn04 small">解決策！</a>
               </div>
 
               <div class="inquiry__box--txt"><span>「法人カード」や「経費清算クラウド」</span>で経費清算を効率化できます！</div>
@@ -215,7 +215,7 @@
                     </li>
                   </ul>
 
-                  <a href="#" class="btn01">カードの詳細はこちら</a>
+                  <a href="#" class="btn03 small">カードの詳細はこちら</a>
                 </li>
 
                 <li class="card__box">
@@ -238,7 +238,7 @@
                     </li>
                   </ul>
 
-                  <a href="#" class="btn01">カードの詳細はこちら</a>
+                  <a href="#" class="btn03 small">カードの詳細はこちら</a>
                 </li>
 
                 <li class="card__box">
@@ -261,7 +261,7 @@
                     </li>
                   </ul>
 
-                  <a href="#" class="btn01">カードの詳細はこちら</a>
+                  <a href="#" class="btn03 small">カードの詳細はこちら</a>
                 </li>
               </ul>
             </div>
@@ -305,7 +305,7 @@
                 </div>
               </div>
 
-              <a href="#" class="btn01">「Concur Expense」をもっと詳しく</a>
+              <a href="#" class="btn03 small">「Concur Expense」をもっと詳しく</a>
             </div>
           </section>
         </div>
@@ -320,7 +320,7 @@
 
             <summary class="flex aiC inquiry__box">
               <div class="flex inquiry__box--btn">
-                <a href="#" class="btn01">解決策！</a>
+                <a href="#" class="btn04 small">解決策！</a>
               </div>
 
               <div class="inquiry__box--txt"><span>「法人カード」や「経費清算クラウド」</span>で経費清算を効率化できます！</div>
@@ -337,7 +337,7 @@
               </div>
             </section>
 
-            <a href="#" class="btn01">支払い.comをもっと詳しく</a>
+            <a href="#" class="btn03 small">支払い.comをもっと詳しく</a>
           </div>
         </section>
       </div>
@@ -351,7 +351,7 @@
 
             <summary class="flex aiC inquiry__box">
               <div class="flex inquiry__box--btn">
-                <a href="#" class="btn01">解決策！</a>
+                <a href="#" class="btn04 small">解決策！</a>
               </div>
 
               <div class="inquiry__box--txt"><span>「セゾンインボイス」</span>で未入金対応を0に。さらに毎月の請求業務を最短15分で！</div>
@@ -388,7 +388,7 @@
                   </div>
                 </div>
 
-                <a href="#" class="btn01">セゾンインボイスをもっと詳しく</a>
+                <a href="#" class="btn02">セゾンインボイスをもっと詳しく</a>
               </div>
             </section>
           </div>
@@ -404,7 +404,7 @@
 
             <summary class="flex gap30 aiC inquiry__box">
               <div class="flex inquiry__box--btn">
-                <a href="#" class="btn01">解決策！</a>
+                <a href="#" class="btn04 small">解決策！</a>
               </div>
 
               <div class="inquiry__box--txt"><span>「セゾンフクリコ」</span>で従業員の満足度を高めて人材が定着する会社に。</div>
@@ -455,7 +455,7 @@
                   </div>
                 </div>
 
-                <a href="#" class="btn01">セゾンフクリコをもっと詳しく</a>
+                <a href="#" class="btn02">セゾンフクリコをもっと詳しく</a>
               </div>
             </section>
           </div>
@@ -471,7 +471,7 @@
 
             <summary class="flex gap30 aiC inquiry__box">
               <div class="flex inquiry__box--btn">
-                <a href="#" class="btn01">解決策！</a>
+                <a href="#" class="btn04 small">解決策！</a>
               </div>
 
               <div class="inquiry__box--txt"><span>「CosPro」</span>で出張手配にまつわる問題をまとめて解決！</div>
@@ -521,7 +521,7 @@
                   </div>
                 </div>
 
-                <a href="#" class="btn01">CosProをもっと詳しく</a>
+                <a href="#" class="btn02">CosProをもっと詳しく</a>
               </div>
             </section>
           </div>
@@ -536,7 +536,7 @@
 
     <h3 class="ttl-tertiary">興味のあるサービス資料をまとめてダウンロードできます。</h3>
 
-    <a href="#" class="btn01">まとめて資料をダウンロードする</a>
+    <a href="#" class="btn02">まとめて資料をダウンロードする</a>
   </section>
 
   <section class="section-quaternary">
@@ -561,7 +561,7 @@
 
             <h6 class="ttl-senary">ビジネスカードを探していたのですが、どのカードが自分に合うのかが分からず迷っていました。そこで、自身がビジネスカードに求める事項が備わっているか・・</h6>
 
-            <a href="#" class="btn01">インタビューの続きを見る</a>
+            <a href="#" class="btn05 small">インタビューの続きを見る</a>
           </div>
 
           <div class="grid__card">
