--- a/app/assets/scss/3-modules/_button.scss
+++ b/app/assets/scss/3-modules/_button.scss
@@ -134,7 +134,7 @@
   }
 }
 
-// ボタン
+// ボタン01
 .btn01 {
   display: block;
   max-width: 560px;
@@ -237,6 +237,7 @@
   }
 }
 
+// ボタン02
 .btn02 {
   display: block;
   max-width: 560px;
@@ -322,6 +323,7 @@
   }
 }
 
+// ボタン03
 .btn03 {
   display: block;
   max-width: 560px;
@@ -407,12 +409,13 @@
   }
 }
 
+// ボタン04
 .btn04 {
   display: block;
   max-width: 560px;
   color: #fff;
   font-size: 16px;
-  font-weight: 450;
+  font-weight: bold;
   text-align: center;
   padding: 5px 35px;
   background: #000;
