--- a/app/assets/scss/4-pages/_introduce.scss
+++ b/app/assets/scss/4-pages/_introduce.scss
@@ -122,8 +122,10 @@
           margin-bottom: 60px;
 
           .sp-reverse {
-            .sec_img {
+            .sec__img {
+              margin-top: 50px;
               max-width: 429px;
+              max-height: 153px;
             }
           }
         }
@@ -137,8 +139,10 @@
           margin-bottom: 60px;
 
           .sp-reverse {
-            .sec_img {
+            .sec__img {
+              margin-top: 50px;
               max-width: 439px;
+              max-height: 153px;
             }
           }
         }
