--- a/app/pages/quaternary/index.njk
+++ b/app/pages/quaternary/index.njk
@@ -154,61 +154,59 @@
             <h3 class="single__ttl">
               <span>個人事業主様・中小企業経営者様におすすめのビジネスカード</span></h3>
 
-            <div class="containers">
-              <ul class="flex gap30 card">
-                <li class="card-type8">
-                  <h3 class="card__box--ttl">ポイント・マイルの還元率を重視したいという方へ</h3>
+            <ul class="flex gap30 card-list">
+              <li class="card-type8">
+                <h3 class="card__box--ttl">ポイント・マイルの還元率を重視したいという方へ</h3>
 
-                  <div class="container">
-                    <div class="flex gap20 card__box-wrapper">
-                      <div class="card__box-credit-card">
-                        <img src="/assets/img/credit_cards/american-express.png" alt="Your Image" class="card-img">
-                      </div>
+                <div class="container">
+                  <div class="flex gap20 card__box-wrapper">
+                    <div class="card__box-credit-card">
+                      <img src="/assets/img/credit_cards/american-express.png" alt="Your Image" class="card-img">
+                    </div>
 
-                      <div class="card__box-title">
-                        <h3 class="ttl-terianry">セゾンコバルト・ビジネス・ アメリカン・エキスプレス®・カード</h3>
+                    <div class="card__box-title">
+                      <h3 class="ttl-terianry">セゾンコバルト・ビジネス・ アメリカン・エキスプレス®・カード</h3>
 
-                        <ul class="price-list">
-                          <li>
-                            <dd>年会費：22,000円（税込）
-                              <br>→初年度年会費無料</dd>
-                          </li>
-                          <li>
-                            <dd>追加カード年会費：3,300円（税込）</dd>
-                          </li>
-                        </ul>
-                      </div>
+                      <ul class="price-list">
+                        <li>
+                          <dd>年会費：22,000円（税込）
+                            <br>→初年度年会費無料</dd>
+                        </li>
+                        <li>
+                          <dd>追加カード年会費：3,300円（税込）</dd>
+                        </li>
+                      </ul>
                     </div>
                   </div>
+                </div>
 
-                  <a href="#" class="btn01">カードの詳細はこちら</a>
-                </li>
+                <a href="#" class="btn03 small">カードの詳細はこちら</a>
+              </li>
 
-                <li class="card-type8">
-                  <h3 class="card__box--ttl">年会費無料にこだわりたいという方へ</h3>
+              <li class="card-type8">
+                <h3 class="card__box--ttl">年会費無料にこだわりたいという方へ</h3>
 
-                  <div class="container">
-                    <div class="flex gap20 card__box-wrapper">
-                      <div class="card__box-credit-card">
-                        <img src="/assets/img/credit_cards/saison-01.png" alt="Your Image" class="card-img">
-                      </div>
+                <div class="container">
+                  <div class="flex gap20 card__box-wrapper">
+                    <div class="card__box-credit-card">
+                      <img src="/assets/img/credit_cards/saison-01.png" alt="Your Image" class="card-img">
+                    </div>
 
-                      <div class="card__box-title">
-                        <h3 class="ttl-terianry">セゾンコバルト・ビジネス・ アメリカン・エキスプレス®・カード</h3>
+                    <div class="card__box-title">
+                      <h3 class="ttl-terianry">セゾンコバルト・ビジネス・ アメリカン・エキスプレス®・カード</h3>
 
-                        <ul class="price-list">
-                          <li>
-                            <dd>本会員・追加カード会員ともに年会費永年無料</dd>
-                          </li>
-                        </ul>
-                      </div>
+                      <ul class="price-list">
+                        <li>
+                          <dd>本会員・追加カード会員ともに年会費永年無料</dd>
+                        </li>
+                      </ul>
                     </div>
                   </div>
+                </div>
 
-                  <a href="#" class="btn01">カードの詳細はこちら</a>
-                </li>
-              </ul>
-            </div>
+                <a href="#" class="btn03 small">カードの詳細はこちら</a>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
