--- a/app/pages/no18/index.njk
+++ b/app/pages/no18/index.njk
@@ -17,7 +17,7 @@
 {# Main content #}
 {% block content %}
 
-  <main class="quaternary-page">
+  <main class="no18-page">
     <section class="section-welcome">
       <h3 class="ttl-tertiary">ビジネスオーナー様の「うれしい」をご提供！</h3>
 
