--- a/app/pages/quinary/index.njk
+++ b/app/pages/quinary/index.njk
@@ -29,9 +29,9 @@
   </section>
 
   <section class="section-primary">
-    <div class="anc">
+    <div class="anc01">
       <div class="containers">
-        <ul class="flex jcC gap30 inherit anc__box">
+        <ul class="flex jcC gap30 inherit anc01__box">
           <li><a href="#">ビジネス規模で選ぶ</a></li>
           <li><a href="#">目的や使い方で選ぶ</a></li>
           <li><a href="#">選ばれる理由</a></li>
